# django-forms

./: db.sqlite3  manage.py  pyproject.toml
react-jeopardy/: .gitlab-ci.yml  package-lock.json  package.json
react-jeopardy/src/: App.js  index.js  jeopardyService.js
react-jeopardy/src/actions/: index.js
react-jeopardy/src/components/: Jeopardy.js  Navigation.js
react-jeopardy/src/components/jeopardy/: AnswerForm.js  GameBoard.js
react-jeopardy/src/reducers/: index.js
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20200806_1504.py  0003_recipe_time_req.py  0004_auto_20200806_1737.py  0005_auto_20200806_1738.py
recipebox_django/: asgi.py  settings.py  urls.py  wsgi.py
templates/: author_details.html  base.html  generic_form.html  index.html  recipe_detail.html
