[tool.poetry]
name = "recipeboxv1"
version = "0.1.0"
description = "Django Recipe Box V1 Assessment"
authors = ["Kathryn Anderson <kat42272@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
